syntax = "proto3";

package k8sinfo;

option go_package = "github.com/Mujib-Ahasan/Rampaz/proto";

import "google/protobuf/empty.proto";

service K8sInfo {
  rpc ListPods(NamespaceRequest) returns (PodListResponse);
  rpc GetNodeStats(NodeRequest) returns (NodeStatsResponse);
  rpc GetPodStats(PodRequest) returns (stream PodStatsResponse);
  rpc GetNodeRealTimeStats(NodeRequest) returns (stream NodeStatsResponse);
  rpc StreamEvents(google.protobuf.Empty) returns (stream EventResponse);
  rpc ListDeployments(NamespaceRequest) returns (WorkloadListResponse);
  rpc ListReplicaSets(NamespaceRequest) returns (WorkloadListResponse);
  rpc ListStatefulSets(NamespaceRequest) returns (WorkloadListResponse);
  rpc ListDaemonSets(NamespaceRequest) returns (WorkloadListResponse);
  rpc ListJobs(NamespaceRequest) returns (WorkloadListResponse);
  rpc ListCronJobs(NamespaceRequest) returns (WorkloadListResponse);
}

message NamespaceRequest {
  string namespace = 1;
}

message PodRequest {
  string namespace = 1;
}

message PodStatsResponse {
  string name = 1;
  string namespace = 2;
  string cpu = 3;
  string memory = 4;
}

message Pod {
  string name = 1;
  string namespace = 2;
  string status = 3;
  string nodeName = 4;
}

message PodListResponse {
  repeated Pod pods = 1;
}

message NodeRequest {
  string nodeName = 1;
}

message NodeStatsResponse {
  string name = 1;
  string cpu = 2;
  string memory = 3;
}

message EventResponse {
  string type = 1;
  string reason = 2;
  string message = 3;
  string involvedObject = 4;
}

message Workload {
  string name = 1;
  string namespace = 2;

  // Replica-related fields (not all apply to every workload)
  int32 desiredReplicas = 3;
  int32 readyReplicas = 4;
  int32 availableReplicas = 5;
  int32 updatedReplicas = 6;

  // Job-specific fields
  int32 active = 7;
  int32 succeeded = 8;
  int32 failed = 9;

  // CronJob-specific fields
  string schedule = 10;
  string lastScheduleTime = 11;

  // Metadata
  map<string, string> labels = 12;
  repeated string conditions = 13;
  string owner = 14;
  string age = 15;
}

message WorkloadListResponse {
  repeated Workload workloads = 1;
}

